fixed scrollbar padding

--- a/p18 project2/style.css
+++ b/p18 project2/style.css
@@ -1,3 +1,6 @@
+html {
+  width: 100vw;
+}
 .switch-button {
   left: 80%;
   font-size: 1.25rem;
